--- a/webrtc-ssr/src/pages/messages.astro
+++ b/webrtc-ssr/src/pages/messages.astro
@@ -66,7 +66,7 @@ import Layout from '../layouts/Layout.astro';
   
           if (message.trim() !== '') {
             socket.emit('chat_message', { userId, username, message });
-            messageInput.value = ''; // Nettoyer le champ après l'envoi
+            messageInput.value = '';
           }
         });
   
