build+doc: some design modif. and frontend rep.

--- a/webrtc-ssr/src/components/Footer.astro
+++ b/webrtc-ssr/src/components/Footer.astro
@@ -4,14 +4,14 @@
 
 <footer class="mt-auto py-4 text-center">
 	<small
-		>Copyright &copy; <span id="copyright"></span> Acody | All rights reserved</small
+		>Copyright &copy; <span id="copyrighspan">Year</span> Acody | All rights reserved</small
 	>
 </footer>
 
-<!-- <script>
-	document.querySelector('#copyright').textContent = new Date().getFullYear().toString()
+<script>
+	document.querySelector('#copyrighspan').textContent = new Date().getFullYear().toString()
 </script>
- -->
+
 <style>
 	a {
 		opacity: 0.7;
