--- a/webrtc-ssr/src/pages/index.astro
+++ b/webrtc-ssr/src/pages/index.astro
@@ -2,8 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 <Layout
-	title="Réunion Webrtc - Application de Communication Vidéo en Temps Réel | Acody"
-	seoTitle="Organisez des Réunions Virtuelles en Temps Réel avec Notre Application Webrtc"
+	seoTitle="Réunion Webrtc - Application de Communication Vidéo en Temps Réel | Acody"
 	seoDesc="Facilitez vos réunions professionnelles avec notre application de projet Webrtc. Effectuez des appels vidéo en temps réel, abandonnez les appels en un clic, et gérez facilement le son et la caméra. Optimisez votre collaboration à distance avec des fonctionnalités simples et efficaces."
 >
 
