--- a/webrtc-ssr/src/pages/messages.astro
+++ b/webrtc-ssr/src/pages/messages.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 ---
-<Layout title="Messagerie Webrtc - Application de Communication Vidéo en Temps Réel" seoTitle="Organisez des Réunions Virtuelles en Temps Réel avec Notre Application Webrtc" seoDesc="Facilitez vos réunions professionnelles avec notre application de projet Webrtc. Effectuez des appels vidéo en temps réel, abandonnez les appels en un clic, et gérez facilement le son et la caméra. Optimisez votre collaboration à distance avec des fonctionnalités simples et efficaces.">
+<Layout seoTitle="Messagerie Webrtc - Application de Communication Vidéo en Temps Réel" seoDesc="Facilitez vos réunions professionnelles avec notre application de projet Webrtc. Effectuez des appels vidéo en temps réel, abandonnez les appels en un clic, et gérez facilement le son et la caméra. Optimisez votre collaboration à distance avec des fonctionnalités simples et efficaces.">
   <div class="bg-neutral-800 text-white p-4 rounded-md shadow-md mt-8">
     <h1 class="text-2xl font-semibold">Messagerie</h1>
   </div>
@@ -13,7 +13,7 @@ import Layout from '../layouts/Layout.astro';
 
 
   <!-- Zone de saisie de nom d'utilisateur -->
-  <div class="bg-neutral-800 p-4 rounded-md shadow-md mb-4">
+  <div class="bg-neutral-800 p-4 rounded-md shadow-md mb-4 mt-4">
     <input
       id="username"
       type="text"
